kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realio-network-frontend
  namespace: realio-network-frontend
spec:
  selector:
    app: realio-network-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
