kustomize/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: realio-network-frontend
  namespace: realio-network-frontend
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
    sectionName: realio-network-frontend
  hostnames:
  - "realiostage.network"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: realio-network-frontend
      port: 80
